[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lang-lang"
version = "0.1.0"
description = "🌻 한글 의성어/의태어로 이루어진 난해한 프로그래밍 언어"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["esolang", "esoteric", "language", "korean", "난해한 프로그래밍 언어"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
rang = "rang.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rang*"]

[tool.setuptools.package-dir]
"" = "."
